[project]
name = "comfyui-styletransferplus"
description = "Nodes: Neural Neighbor, CAST, EFDM, MicroAST, UniST, AesPA, TSSAT ..."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["torch", "torchvision", "scikit-image", "einops"]

[project.urls]
Repository = "https://github.com/FuouM/ComfyUI-StyleTransferPlus"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fuoumarinas"
DisplayName = "ComfyUI-StyleTransferPlus"
Icon = ""
